--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,21 @@
 <!doctype html>
 <html>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-  <link href="css/style.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  <title>BKP Nepal | Life Changing Platform </title>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name='keywords' content='bkp nepal, a life changing platform, investment in nepal'>
+    <meta name='robots' content='index,follow'>
+    <meta name='author' content='Dipin Bishwakarma'>
+    <meta name='designer' content='Dipin Bishwakarma'>
+    <meta name='owner' content='Bishwokarma Trading and Promotors Pvt. ltd'>
+    <meta name='og:title' content='BKP Nepal'>
+    <meta name='fb:page_id' content=''>
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <title>BKP Nepal | Life Changing Platform </title>
+  </head>
 
 <body class="bg-gray-200 font-natosans antialiased text-gray-600">
   <div class="fixed z-10 w-full bg-white px-6 shadow-md">
@@ -198,7 +205,7 @@
         मंचमा हजुरलाई स्वागत छ।</h1>
       <div class="mt-6" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-delay="100">
         <a href="register.html"
-          class="text-white uppercase  md:text-xl bg-brand  hover:bg-brand-800 mt-6 md:mt-8 px-6 py-3 rounded-md focus:outline  focus:outline-2 focus:outline-brand-200 focus:outline-offset-2">Become
+          class="text-white uppercase  md:text-xl bg-brand  hover:bg-brand-800 shadow-lg shadow-brand-800/30 mt-6 md:mt-8 px-6 py-3 rounded-md focus:outline  focus:outline-2 focus:outline-brand-200 focus:outline-offset-2">Become
           a member
         </a>
       </div>
@@ -274,7 +281,7 @@
         २०७३कार्तिक २६ गते कम्पनी रजिस्ट्रार कार्यलयमा दर्ता भई संचालनमा आएको कम्पनी हो बिश्वकर्मा टेडिङ्ग एण्ड
         प्रमोटर्स प्रा.लि. । यस कम्पनीको एक मात्र संचालक इ.सन्जुक्ता सुनार हुनुहुन्छ । कम्पनीको मुख्य कार्यलय हाल बुटवल
         -११ रुपन्देही मा रहेको छ।</p>
-      <a href="about.html" class="btn bg-brand text-sm ">पुरा पढ्नुस</a>
+      <a href="about.html" class="btn bg-brand text-sm shadow-lg shadow-brand-800/50">पुरा पढ्नुस</a>
     </div>
 
   </section>
@@ -416,7 +423,7 @@
           </address>
         </div>
         <div class="mt-8 mb-4">
-          <a class="btn bg-brand mt-4 py-3 text-md uppercase" href="register.html">Become a member</a>
+          <a class="btn bg-brand mt-4 py-3 text-md uppercase shadow-lg shadow-brand-800/30" href="register.html">Become a member</a>
         </div>
       </div>
 
