--- a/public/action-plan.html
+++ b/public/action-plan.html
@@ -1,15 +1,21 @@
 <!doctype html>
 <html class="scroll-smooth">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-
-  <link href="css/style.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  <title>BKP Nepal | Life Changing Platform </title>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name='keywords' content='bkp nepal, a life changing platform, investment in nepal'>
+    <meta name='robots' content='index,follow'>
+    <meta name='author' content='Dipin Bishwakarma'>
+    <meta name='designer' content='Dipin Bishwakarma'>
+    <meta name='owner' content='Bishwokarma Trading and Promotors Pvt. ltd'>
+    <meta name='og:title' content='BKP Nepal'>
+    <meta name='fb:page_id' content=''>
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <title>Action Plan | BKP Nepal | Life Changing Platform </title>
+  </head>
 
 <body class="bg-gray-200 font-natosans antialiased text-gray-600">
   <div class="fixed z-10 w-full bg-white px-6 shadow-lg">
