--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,9 @@
     <meta name='author' content='Dipin Bishwakarma'>
     <meta name='designer' content='Dipin Bishwakarma'>
     <meta name='owner' content='Bishwokarma Trading and Promotors Pvt. ltd'>
+    <meta name='og:image' content='images/bkp-og-image.jpg'>
     <meta name='og:title' content='BKP Nepal'>
+    <meta name='og:description' content='A life changing platform.'>
     <meta name='fb:page_id' content=''>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link href="css/style.css" rel="stylesheet">
